--- a/firebase.json
+++ b/firebase.json
@@ -1,23 +1,38 @@
 {
-    "flutter": {
-        "platforms": {
-            "android": {
-                "default": {
-                    "projectId": "eco-grow-e50ea",
-                    "appId": "1:310347739256:android:11931b238bbbf70e623d8d",
-                    "fileOutput": "android/app/google-services.json"
-                }
-            },
-            "dart": {
-                "lib/firebase_options.dart": {
-                    "projectId": "eco-grow-e50ea",
-                    "configurations": {
-                        "android": "1:310347739256:android:11931b238bbbf70e623d8d",
-                        "ios": "1:310347739256:ios:9125b240a68d4615623d8d",
-                        "web": "1:310347739256:web:136da01bed092bf8623d8d"
-                    }
-                }
-            }
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "eco-grow-e50ea",
+          "appId": "1:310347739256:android:11931b238bbbf70e623d8d",
+          "fileOutput": "android/app/google-services.json"
         }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "eco-grow-e50ea",
+          "configurations": {
+            "android": "1:310347739256:android:11931b238bbbf70e623d8d",
+            "ios": "1:310347739256:ios:9125b240a68d4615623d8d",
+            "web": "1:310347739256:web:136da01bed092bf8623d8d"
+          }
+        }
+      }
     }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "hosting": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "frameworksBackend": {
+      "region": "asia-east1"
+    }
+  }
 }
