--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,7 @@ description: "A new Flutter project."
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
-flutter_icons:
-  android: true
-  ios: true
-  image_path: assets/icons/logo.png
+
 
 environment:
   sdk: ^3.5.0
@@ -37,11 +34,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
+  firebase_storage: ^12.3.2
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.1
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
   intl: ^0.19.0
   lottie: ^3.1.2
   mailer: ^6.2.0
@@ -58,6 +57,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/logo.png"  # Đường dẫn tới ảnh icon của bạn
+  adaptive_icon_background: "#FFFFFF"     # Màu nền cho adaptive icon (Android)
+  adaptive_icon_foreground: "assets/icons/logo.png" # Icon adaptive foreground (Android)
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
